--- a/.github/workflows/automate_test.yml
+++ b/.github/workflows/automate_test.yml
@@ -1,8 +1,5 @@
 name: Github Actions Example
-on:
-  push:
-    branches: 
-        - master 
+on: push
 jobs:
   build:
     name: Build simple project
