--- a/.github/workflows/automate_test.yml
+++ b/.github/workflows/automate_test.yml
@@ -1,5 +1,9 @@
 name: Github Actions Example
-on: push
+on:
+  push:
+    branches:
+      - master
+      - 'releases/**'
 jobs:
   build:
     name: Build simple project
