--- a/.github/workflows/automate_test.yml
+++ b/.github/workflows/automate_test.yml
@@ -1,8 +1,9 @@
 name: Github Actions Example
 on:
-  push:
+  pull_request:
     branches:
       - master
+      - develop
       - 'releases/**'
 jobs:
   build:
